--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@ TemplateMo 546 MAH Store
 
   links = window.location.href;
   console.log(links);
-  if(links == "mah.netlify.app/#done"){
+  if(links == "mahstore.netlify.app/#done"){
     document.getElementById("pop").style.display = "block";
   };
 </script>
