--- a/public/index.html
+++ b/public/index.html
@@ -98,8 +98,8 @@ TemplateMo 546 MAH Store
           </div>
           <div class="col-md-6 right" dir="rlt">
             <div class="left-content">
-              <h4>افضل المنتجات والادوات الكهربائية</h4>
-              <p>متجرنا لبيع المنتجات والادوات الكهربائية بجوده عالية وافضل الاسعار<a rel="nofollow" href="https://templatemo.com/contact"> تواصل معنا </a> لمزيد من التفاصيل.</p>
+              <h4>افضل المنتجات</h4>
+              <p>متجرنا لبيع منتجات بجوده عالية وافضل الاسعار<a rel="nofollow" href="https://templatemo.com/contact"> تواصل معنا </a> لمزيد من التفاصيل.</p>
               <ul class="featured-list">
                 <li>1- ادوات بجودة عالية</li>
                 <li>2- افضل الاسعار</li>
