update after money

--- a/public/index.html
+++ b/public/index.html
@@ -51,20 +51,20 @@ TemplateMo 546 MAH Store
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
           <div class="text-content">
-            <h4>افضل العروض</h4>
-            <h2>ارخص الاسعار وافضل العروض</h2>
+            <h4>منتجات الاحذية</h4>
+            <h2><a href="#!/mntjt-lHdhy@/c/127401506" style="color: #fff; text-decoration: underline !important;">احصل على افضل الاحذية</a></h2>
           </div>
         </div>
         <div class="banner-item-02">
           <div class="text-content">
-            <h4>جودة عالية</h4>
-            <h2>جودة منتجاتنا عالية</h2>
+            <h4>منتجات منزلية</h4>
+            <h2><a href="#!/mntjt-lHdhy@/c/127401506" style="color: #fff; text-decoration: underline !important;">احصل على افضل المنتجات المنزلية</a></h2>
           </div>
         </div>
         <div class="banner-item-03">
           <div class="text-content">
-            <h4>الدفع</h4>
-            <h2>طرق دفع مختلفة</h2>
+            <h4>ادوات كهربائية</h4>
+            <h2><a href="#!/ldwt-lkhrbyy@/c/127401254" style="color: #fff; text-decoration: underline !important;">احصل على افضل الادوات الكهربائية</a></h2>
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@ TemplateMo 546 MAH Store
 
   links = window.location.href;
   console.log(links);
-  if(links == "https://mahstore.netlify.app/#done"){
+  if(links == "mah.netlify.app/#done"){
     document.getElementById("pop").style.display = "block";
   };
 </script>
